[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu_controller.gd" id="1_ctrl"]

[node name="PauseMenuController" type="CanvasLayer"]
layer = 20
process_mode = 3
script = ExtResource("1_ctrl")

[node name="InputBlocker" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.6)

[node name="ScreenContainer" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
